--- a/backend/package.json
+++ b/backend/package.json
@@ -23,5 +23,8 @@
     "react-toastify": "^11.0.3",
     "stripe": "^17.6.0",
     "validator": "^13.12.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
