--- a/backend/package.json
+++ b/backend/package.json
@@ -22,9 +22,7 @@
     "razorpay": "^2.9.5",
     "react-toastify": "^11.0.3",
     "stripe": "^17.6.0",
-    "validator": "^13.12.0"
-  },
-  "devDependencies": {
+    "validator": "^13.12.0",
     "nodemon": "^3.1.9"
   }
 }
